<resources>
    <string name="app_name">Single Screen</string>

    <string name="business_name">Tanits</string>
    <string name="tv_lead_text">You are your child\'s first teacher.</string>
    <string name="tv_visuals_title">Learn. Teach.</string>
    <string name="tv_quote">\"Parents are the ultimate role models for children. Every word, movement and action has an effect. No other person or outside force has a greater influence on a child than the parent.\" (Bob Keeshan)</string>
    <string name="tv_help">Don\'t you know how to make it? We\'re happy to help you!</string>
    <string name="twitter_name">TanitsHQ</string>
    <string name="linkedin_name">Tanits</string>
    <string name="website">https://www.tanits.com/</string>
    <string name="email">wehelp@tanits.com</string>
</resources>
