<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackgroundWhite"
    tools:context="com.example.android.singlescreen.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/header"
                style="@style/MainPicture"/>

            <TextView
                android:id="@+id/tv_business_name"
                android:text="@string/business_name"
                style="@style/BusinessName"/>

        </RelativeLayout>

        <TextView
            android:text="@string/tv_lead_text"
            style="@style/LeadText"/>

        <TextView
            android:text="@string/tv_visuals_title"
            style="@style/VisualsTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/layout_xxl_margin_padding">

            <ImageView
                android:src="@drawable/baby_steps"
                style="@style/PictureLeft"/>

            <ImageView
                android:src="@drawable/abacus"
                style="@style/PictureRight"/>

        </LinearLayout>

        <View
            style="@style/Line"/>

        <TextView
            android:text="@string/tv_quote"
            style="@style/Quote"/>

        <View
            style="@style/Line"/>

        <LinearLayout
            style="@style/HelpLinearLayout">


            <TextView
                android:text="@string/tv_help"
                style="@style/HelpText"/>



            <ImageView
                android:src="@drawable/help_icon"
                style="@style/PictureHelp"/>

        </LinearLayout>

        <LinearLayout
            style="@style/ContactLinearLayout">

            <LinearLayout
                style="@style/ContactSubLinearLayout"
                android:layout_marginTop="@dimen/layout_small_margin_padding">

                <ImageView
                    android:src="@drawable/web_icon"
                    style="@style/ContactIcon"/>

                <TextView
                    android:id="@+id/tv_website"
                    android:text="@string/website"
                    style="@style/ContactText"/>

            </LinearLayout>

            <LinearLayout
                style="@style/ContactSubLinearLayout">

                <ImageView
                    android:src="@drawable/email_icon"
                    style="@style/ContactIcon"/>

                <TextView
                    android:id="@+id/tv_email"
                    android:text="@string/email"
                    style="@style/ContactText"
                    android:onClick="SendEmail"
                    android:textColorLink="@color/colorContactText"/>

            </LinearLayout>

            <LinearLayout
                style="@style/ContactSubLinearLayout">

                <ImageView
                    android:src="@drawable/twitter_icon"
                    style="@style/ContactIcon"/>

                <TextView
                    android:id="@+id/tv_twitter"
                    android:text="@string/twitter_name"
                    style="@style/ContactText"/>

            </LinearLayout>

            <LinearLayout
                style="@style/ContactSubLinearLayout">

                <ImageView
                    android:src="@drawable/linkedin_icon"
                    style="@style/ContactIcon"/>

                <TextView
                    android:id="@+id/tv_linkedin"
                    android:text="@string/linkedin_name"
                    style="@style/ContactText"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
